Issue #17937: Try harder to collect cyclic garbage at shutdown.